<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BalFin</string>
    <string name="title_activity_main">BalFin</string>
    <string name="shortcut_expense_short">Add expense</string>
    <string name="shortcut_expense_long">Quick add expense</string>
    <string name="shortcut_income_short">Add income</string>
    <string name="shortcut_income_long">Quick add income</string>
    <string name="shortcut_invest_short">Investments</string>
    <string name="shortcut_invest_long">View investments</string>
    <string name="shortcut_disabled">Shortcut disabled</string>
    <string name="widget_add_expense">Add expense</string>
    <string name="widget_add_income">Add income</string>
</resources>
